# windows-rs

./: Cargo.toml
crates/libs/windows/: Cargo.toml
crates/libs/windows/src/Windows/AI/MachineLearning/: impl.rs
crates/libs/windows/src/Windows/ApplicationModel/: impl.rs  mod.rs
crates/libs/windows/src/Windows/ApplicationModel/Activation/: impl.rs
crates/libs/windows/src/Windows/ApplicationModel/Appointments/: impl.rs
crates/libs/windows/src/Windows/ApplicationModel/Background/: impl.rs  mod.rs
crates/libs/windows/src/Windows/ApplicationModel/Chat/: impl.rs  mod.rs
crates/libs/windows/src/Windows/ApplicationModel/Contacts/: impl.rs
crates/libs/windows/src/Windows/ApplicationModel/Core/: impl.rs
crates/libs/windows/src/Windows/ApplicationModel/DataTransfer/: mod.rs
crates/libs/windows/src/Windows/ApplicationModel/Payments/: mod.rs
crates/libs/windows/src/Windows/ApplicationModel/Search/: impl.rs
crates/libs/windows/src/Windows/ApplicationModel/Store/: mod.rs
crates/libs/windows/src/Windows/ApplicationModel/UserActivities/: impl.rs
crates/libs/windows/src/Windows/ApplicationModel/UserDataAccounts/Provider/: impl.rs
crates/libs/windows/src/Windows/Data/Json/: impl.rs
crates/libs/windows/src/Windows/Data/Text/: mod.rs
crates/libs/windows/src/Windows/Data/Xml/Dom/: impl.rs
crates/libs/windows/src/Windows/Devices/: impl.rs
crates/libs/windows/src/Windows/Devices/Adc/Provider/: impl.rs
crates/libs/windows/src/Windows/Devices/Custom/: impl.rs
crates/libs/windows/src/Windows/Devices/Enumeration/: impl.rs
crates/libs/windows/src/Windows/Devices/Geolocation/: impl.rs  mod.rs
crates/libs/windows/src/Windows/Devices/Gpio/Provider/: impl.rs
crates/libs/windows/src/Windows/Devices/I2c/: impl.rs
crates/libs/windows/src/Windows/Devices/I2c/Provider/: impl.rs
crates/libs/windows/src/Windows/Devices/Lights/Effects/: impl.rs
crates/libs/windows/src/Windows/Devices/Midi/: impl.rs
crates/libs/windows/src/Windows/Devices/PointOfService/: impl.rs
crates/libs/windows/src/Windows/Devices/Pwm/Provider/: impl.rs
crates/libs/windows/src/Windows/Devices/Scanners/: impl.rs
crates/libs/windows/src/Windows/Devices/Sensors/: impl.rs
crates/libs/windows/src/Windows/Devices/SmartCards/: mod.rs
crates/libs/windows/src/Windows/Devices/Sms/: impl.rs  mod.rs
crates/libs/windows/src/Windows/Devices/Spi/: impl.rs
crates/libs/windows/src/Windows/Foundation/: impl.rs  mod.rs
crates/libs/windows/src/Windows/Foundation/Collections/: impl.rs  mod.rs
crates/libs/windows/src/Windows/Foundation/Diagnostics/: impl.rs
crates/libs/windows/src/Windows/Gaming/Input/: impl.rs
crates/libs/windows/src/Windows/Globalization/NumberFormatting/: impl.rs
crates/libs/windows/src/Windows/Graphics/: impl.rs
crates/libs/windows/src/Windows/Graphics/Display/: mod.rs
crates/libs/windows/src/Windows/Graphics/Effects/: impl.rs
crates/libs/windows/src/Windows/Graphics/Imaging/: impl.rs
crates/libs/windows/src/Windows/Graphics/Printing/: impl.rs  mod.rs
crates/libs/windows/src/Windows/Graphics/Printing3D/: mod.rs
crates/libs/windows/src/Windows/Media/: impl.rs
crates/libs/windows/src/Windows/Media/Audio/: impl.rs
crates/libs/windows/src/Windows/Media/Capture/: mod.rs
crates/libs/windows/src/Windows/Media/Core/: impl.rs
crates/libs/windows/src/Windows/Media/Devices/: impl.rs  mod.rs
crates/libs/windows/src/Windows/Media/Effects/: impl.rs
crates/libs/windows/src/Windows/Media/MediaProperties/: impl.rs
crates/libs/windows/src/Windows/Media/Playback/: impl.rs
crates/libs/windows/src/Windows/Media/Protection/: impl.rs  mod.rs
crates/libs/windows/src/Windows/Media/SpeechRecognition/: impl.rs
crates/libs/windows/src/Windows/Networking/BackgroundTransfer/: impl.rs
crates/libs/windows/src/Windows/Networking/Connectivity/: mod.rs
crates/libs/windows/src/Windows/Networking/NetworkOperators/: mod.rs
crates/libs/windows/src/Windows/Networking/Proximity/: mod.rs
crates/libs/windows/src/Windows/Networking/Sockets/: impl.rs
crates/libs/windows/src/Windows/Networking/Vpn/: impl.rs
crates/libs/windows/src/Windows/Phone/PersonalInformation/: impl.rs
crates/libs/windows/src/Windows/Phone/StartScreen/: impl.rs
crates/libs/windows/src/Windows/Security/Credentials/: impl.rs
crates/libs/windows/src/Windows/Security/Isolation/: mod.rs
crates/libs/windows/src/Windows/Storage/: impl.rs  mod.rs
crates/libs/windows/src/Windows/Storage/AccessCache/: impl.rs
crates/libs/windows/src/Windows/Storage/BulkAccess/: impl.rs
crates/libs/windows/src/Windows/Storage/FileProperties/: impl.rs
crates/libs/windows/src/Windows/Storage/Provider/: impl.rs
crates/libs/windows/src/Windows/Storage/Search/: impl.rs
crates/libs/windows/src/Windows/Storage/Streams/: impl.rs
crates/libs/windows/src/Windows/System/: impl.rs  mod.rs
crates/libs/windows/src/Windows/System/RemoteSystems/: impl.rs
crates/libs/windows/src/Windows/System/Threading/: mod.rs
crates/libs/windows/src/Windows/UI/ApplicationSettings/: mod.rs
crates/libs/windows/src/Windows/UI/Composition/: impl.rs  mod.rs
crates/libs/windows/src/Windows/UI/Core/: impl.rs  mod.rs
crates/libs/windows/src/Windows/UI/Input/: impl.rs
crates/libs/windows/src/Windows/UI/Input/Inking/: impl.rs  (+1 more)
crates/libs/windows/src/Windows/UI/Notifications/: impl.rs
crates/libs/windows/src/Windows/UI/Popups/: impl.rs  mod.rs
crates/libs/windows/src/Windows/UI/Shell/: impl.rs
crates/libs/windows/src/Windows/UI/Text/: impl.rs
crates/libs/windows/src/Windows/UI/WebUI/: impl.rs  mod.rs
crates/libs/windows/src/Windows/Web/: impl.rs
crates/libs/windows/src/Windows/Web/Http/: impl.rs
crates/libs/windows/src/Windows/Web/Syndication/: impl.rs
crates/libs/windows/src/Windows/Web/UI/: impl.rs
crates/libs/windows/src/Windows/Win32/Gaming/: impl.rs
crates/libs/windows/src/Windows/Win32/Globalization/: impl.rs
crates/libs/windows/src/Windows/Win32/Media/: impl.rs
crates/libs/windows/src/core/: mod.rs
crates/miri/implement/: Cargo.toml
crates/miri/implement/tests/: com.rs  delegate.rs  non_com.rs  query.rs
(+330 files in other folders)
