
[package]
name = "windows"
version = "0.52.0"
authors = ["Microsoft"]
edition = "2021"
rust-version = "1.62"
license = "MIT OR Apache-2.0"
description = "Rust for Windows"
repository = "https://github.com/microsoft/windows-rs"
documentation = "https://microsoft.github.io/windows-docs-rs/"
readme = "readme.md"
categories = ["os::windows-apis"]

[lints]
workspace = true

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
windows-core = { path = "../core", version = "0.52.0" }
windows-targets = { path = "../targets", version = "0.52.0" }
windows-implement = { path = "../implement",  version = "0.52.0", optional = true }
windows-interface = { path = "../interface",  version = "0.52.0", optional = true }

[features]
default = []
docs = []
deprecated = []
implement = ["windows-implement", "windows-interface", "windows-core/implement"]
# generated features
AI = []
AI_MachineLearning = ["AI", "Foundation"]
ApplicationModel = ["Foundation"]
ApplicationModel_Activation = ["ApplicationModel", "Foundation"]
ApplicationModel_AppExtensions = ["ApplicationModel", "Foundation"]
ApplicationModel_AppService = ["ApplicationModel", "Foundation"]
ApplicationModel_Appointments = ["ApplicationModel", "Foundation"]
ApplicationModel_Appointments_AppointmentsProvider = ["ApplicationModel_Appointments", "Foundation"]
ApplicationModel_Appointments_DataProvider = ["ApplicationModel_Appointments", "Foundation"]
ApplicationModel_Background = ["ApplicationModel", "Foundation"]
ApplicationModel_Calls = ["ApplicationModel", "Foundation"]
ApplicationModel_Calls_Background = ["ApplicationModel_Calls", "Foundation"]
ApplicationModel_Calls_Provider = ["ApplicationModel_Calls", "Foundation"]
ApplicationModel_Chat = ["ApplicationModel", "Foundation"]
ApplicationModel_CommunicationBlocking = ["ApplicationModel", "Foundation"]
ApplicationModel_Contacts = ["ApplicationModel", "Foundation"]
ApplicationModel_Contacts_DataProvider = ["ApplicationModel_Contacts", "Foundation"]
ApplicationModel_Contacts_Provider = ["ApplicationModel_Contacts", "Foundation"]
ApplicationModel_ConversationalAgent = ["ApplicationModel", "Foundation"]
ApplicationModel_Core = ["ApplicationModel", "Foundation"]
ApplicationModel_DataTransfer = ["ApplicationModel", "Foundation"]
ApplicationModel_DataTransfer_DragDrop = ["ApplicationModel_DataTransfer"]
ApplicationModel_DataTransfer_DragDrop_Core = ["ApplicationModel_DataTransfer_DragDrop", "Foundation"]
ApplicationModel_DataTransfer_ShareTarget = ["ApplicationModel_DataTransfer"]
ApplicationModel_Email = ["ApplicationModel", "Foundation"]
ApplicationModel_Email_DataProvider = ["ApplicationModel_Email", "Foundation"]
ApplicationModel_ExtendedExecution = ["ApplicationModel", "Foundation"]
ApplicationModel_ExtendedExecution_Foreground = ["ApplicationModel_ExtendedExecution", "Foundation"]
ApplicationModel_Holographic = ["ApplicationModel"]
ApplicationModel_LockScreen = ["ApplicationModel", "Foundation"]
ApplicationModel_Payments = ["ApplicationModel", "Foundation"]
ApplicationModel_Payments_Provider = ["ApplicationModel_Payments", "Foundation"]
ApplicationModel_Preview = ["ApplicationModel"]
ApplicationModel_Preview_Holographic = ["ApplicationModel_Preview"]
ApplicationModel_Preview_InkWorkspace = ["ApplicationModel_Preview", "Foundation"]
ApplicationModel_Preview_Notes = ["ApplicationModel_Preview", "Foundation"]
ApplicationModel_Resources = ["ApplicationModel", "Foundation"]
ApplicationModel_Resources_Core = ["ApplicationModel_Resources", "Foundation"]
ApplicationModel_Resources_Management = ["ApplicationModel_Resources", "Foundation"]
ApplicationModel_Search = ["ApplicationModel", "Foundation"]
ApplicationModel_Search_Core = ["ApplicationModel_Search", "Foundation"]
ApplicationModel_Store = ["ApplicationModel", "Foundation"]
ApplicationModel_Store_LicenseManagement = ["ApplicationModel_Store", "Foundation"]
ApplicationModel_Store_Preview = ["ApplicationModel_Store", "Foundation"]
ApplicationModel_Store_Preview_InstallControl = ["ApplicationModel_Store_Preview", "Foundation"]
ApplicationModel_UserActivities = ["ApplicationModel", "Foundation"]
ApplicationModel_UserActivities_Core = ["ApplicationModel_UserActivities", "Foundation"]
ApplicationModel_UserDataAccounts = ["ApplicationModel", "Foundation"]
ApplicationModel_UserDataAccounts_Provider = ["ApplicationModel_UserDataAccounts"]
ApplicationModel_UserDataAccounts_SystemAccess = ["ApplicationModel_UserDataAccounts", "Foundation"]
ApplicationModel_UserDataTasks = ["ApplicationModel", "Foundation"]
ApplicationModel_UserDataTasks_DataProvider = ["ApplicationModel_UserDataTasks", "Foundation"]
ApplicationModel_VoiceCommands = ["ApplicationModel", "Foundation"]
ApplicationModel_Wallet = ["ApplicationModel", "Foundation"]
ApplicationModel_Wallet_System = ["ApplicationModel_Wallet", "Foundation"]
Data = []
Data_Html = ["Data"]
Data_Json = ["Data"]
Data_Pdf = ["Data", "Foundation"]
Data_Text = ["Data", "Foundation"]
Data_Xml = ["Data"]
Data_Xml_Dom = ["Data_Xml", "Foundation"]
Data_Xml_Xsl = ["Data_Xml"]
Devices = []
Devices_Adc = ["Devices", "Foundation"]
Devices_Adc_Provider = ["Devices_Adc"]
Devices_Background = ["Devices", "Foundation"]
Devices_Bluetooth = ["Devices", "Foundation"]
Devices_Bluetooth_Advertisement = ["Devices_Bluetooth", "Foundation"]
Devices_Bluetooth_Background = ["Devices_Bluetooth", "Foundation"]
Devices_Bluetooth_GenericAttributeProfile = ["Devices_Bluetooth", "Foundation"]
Devices_Bluetooth_Rfcomm = ["Devices_Bluetooth", "Foundation"]
Devices_Custom = ["Devices", "Foundation"]
Devices_Display = ["Devices", "Foundation"]
Devices_Display_Core = ["Devices_Display", "Foundation"]
Devices_Enumeration = ["Devices", "Foundation"]
Devices_Enumeration_Pnp = ["Devices_Enumeration", "Foundation"]
Devices_Geolocation = ["Devices", "Foundation"]
Devices_Geolocation_Geofencing = ["Devices_Geolocation", "Foundation"]
Devices_Geolocation_Provider = ["Devices_Geolocation", "Foundation"]
Devices_Gpio = ["Devices", "Foundation"]
Devices_Gpio_Provider = ["Devices_Gpio", "Foundation"]
Devices_Haptics = ["Devices", "Foundation"]
Devices_HumanInterfaceDevice = ["Devices", "Foundation"]
Devices_I2c = ["Devices", "Foundation"]
Devices_I2c_Provider = ["Devices_I2c", "Foundation"]
Devices_Input = ["Devices", "Foundation"]
Devices_Input_Preview = ["Devices_Input", "Foundation"]
Devices_Lights = ["Devices", "Foundation"]
Devices_Lights_Effects = ["Devices_Lights", "Foundation"]
Devices_Midi = ["Devices", "Foundation"]
Devices_PointOfService = ["Devices", "Foundation"]
Devices_PointOfService_Provider = ["Devices_PointOfService", "Foundation"]
Devices_Portable = ["Devices"]
Devices_Power = ["Devices", "Foundation"]
Devices_Printers = ["Devices", "Foundation"]
Devices_Printers_Extensions = ["Devices_Printers", "Foundation"]
Devices_Pwm = ["Devices", "Foundation"]
Devices_Pwm_Provider = ["Devices_Pwm"]
Devices_Radios = ["Devices", "Foundation"]
Devices_Scanners = ["Devices", "Foundation"]
Devices_Sensors = ["Devices", "Foundation"]
Devices_Sensors_Custom = ["Devices_Sensors", "Foundation"]
Devices_SerialCommunication = ["Devices", "Foundation"]
Devices_SmartCards = ["Devices", "Foundation"]
Devices_Sms = ["Devices", "Foundation"]
Devices_Spi = ["Devices", "Foundation"]
Devices_Spi_Provider = ["Devices_Spi", "Foundation"]
Devices_Usb = ["Devices", "Foundation"]
Devices_WiFi = ["Devices", "Foundation"]
Devices_WiFiDirect = ["Devices", "Foundation"]
Devices_WiFiDirect_Services = ["Devices_WiFiDirect", "Foundation"]
Embedded = []
Embedded_DeviceLockdown = ["Embedded", "Foundation"]
Foundation = []
Foundation_Collections = ["Foundation", "Foundation"]
Foundation_Diagnostics = ["Foundation", "Foundation"]
Foundation_Metadata = ["Foundation"]
Foundation_Numerics = ["Foundation"]
Gaming = []
Gaming_Input = ["Gaming", "Foundation"]
Gaming_Input_Custom = ["Gaming_Input", "Foundation"]
Gaming_Input_ForceFeedback = ["Gaming_Input", "Foundation"]
Gaming_Input_Preview = ["Gaming_Input"]
Gaming_Preview = ["Gaming"]
Gaming_Preview_GamesEnumeration = ["Gaming_Preview", "Foundation"]
Gaming_UI = ["Gaming", "Foundation"]
Gaming_XboxLive = ["Gaming"]
Gaming_XboxLive_Storage = ["Gaming_XboxLive", "Foundation"]
Globalization = ["Foundation"]
Globalization_Collation = ["Globalization"]
Globalization_DateTimeFormatting = ["Globalization", "Foundation"]
Globalization_Fonts = ["Globalization"]
Globalization_NumberFormatting = ["Globalization", "Foundation"]
Globalization_PhoneNumberFormatting = ["Globalization"]
Graphics = []
Graphics_Capture = ["Graphics", "Foundation"]
Graphics_DirectX = ["Graphics"]
Graphics_DirectX_Direct3D11 = ["Graphics_DirectX"]
Graphics_Display = ["Graphics", "Foundation"]
Graphics_Display_Core = ["Graphics_Display", "Foundation"]
Graphics_Effects = ["Graphics"]
Graphics_Holographic = ["Graphics", "Foundation"]
Graphics_Imaging = ["Graphics", "Foundation"]
Graphics_Printing = ["Graphics", "Foundation"]
Graphics_Printing3D = ["Graphics", "Foundation"]
Graphics_Printing_OptionDetails = ["Graphics_Printing", "Foundation"]
Graphics_Printing_PrintSupport = ["Graphics_Printing", "Foundation"]
Graphics_Printing_PrintTicket = ["Graphics_Printing", "Foundation"]
Graphics_Printing_Workflow = ["Graphics_Printing", "Foundation"]
Management = ["Foundation"]
Management_Core = ["Management"]
Management_Deployment = ["Management", "Foundation"]
Management_Deployment_Preview = ["Management_Deployment"]
Management_Policies = ["Management", "Foundation"]
Management_Update = ["Management", "Foundation"]
Management_Workplace = ["Management"]
Media = ["Foundation"]
Media_AppBroadcasting = ["Media", "Foundation"]
Media_AppRecording = ["Media", "Foundation"]
Media_Audio = ["Media", "Foundation"]
Media_Capture = ["Media", "Foundation"]
Media_Capture_Core = ["Media_Capture", "Foundation"]
Media_Capture_Frames = ["Media_Capture", "Foundation"]
Media_Casting = ["Media", "Foundation"]
Media_ClosedCaptioning = ["Media", "Foundation"]
Media_ContentRestrictions = ["Media", "Foundation"]
Media_Control = ["Media", "Foundation"]
Media_Core = ["Media", "Foundation"]
Media_Core_Preview = ["Media_Core", "Foundation"]
Media_Devices = ["Media", "Foundation"]
Media_Devices_Core = ["Media_Devices", "Foundation"]
Media_DialProtocol = ["Media", "Foundation"]
Media_Editing = ["Media", "Foundation"]
Media_Effects = ["Media", "Foundation"]
Media_FaceAnalysis = ["Media", "Foundation"]
Media_Import = ["Media", "Foundation"]
Media_MediaProperties = ["Media", "Foundation"]
Media_Miracast = ["Media", "Foundation"]
Media_Ocr = ["Media", "Foundation"]
Media_PlayTo = ["Media", "Foundation"]
Media_Playback = ["Media", "Foundation"]
Media_Playlists = ["Media", "Foundation"]
Media_Protection = ["Media", "Foundation"]
Media_Protection_PlayReady = ["Media_Protection", "Foundation"]
Media_Render = ["Media"]
Media_SpeechRecognition = ["Media", "Foundation"]
Media_SpeechSynthesis = ["Media", "Foundation"]
Media_Streaming = ["Media"]
Media_Streaming_Adaptive = ["Media_Streaming", "Foundation"]
Media_Transcoding = ["Media", "Foundation"]
Networking = []
Networking_BackgroundTransfer = ["Networking", "Foundation"]
Networking_Connectivity = ["Networking", "Foundation"]
Networking_NetworkOperators = ["Networking", "Foundation"]
Networking_Proximity = ["Networking", "Foundation"]
Networking_PushNotifications = ["Networking", "Foundation"]
Networking_ServiceDiscovery = ["Networking"]
Networking_ServiceDiscovery_Dnssd = ["Networking_ServiceDiscovery", "Foundation"]
Networking_Sockets = ["Networking", "Foundation"]
Networking_Vpn = ["Networking", "Foundation"]
Networking_XboxLive = ["Networking", "Foundation"]
Perception = ["Foundation"]
Perception_Automation = ["Perception"]
Perception_Automation_Core = ["Perception_Automation", "Foundation"]
Perception_People = ["Perception", "Foundation"]
Perception_Spatial = ["Perception", "Foundation"]
Perception_Spatial_Preview = ["Perception_Spatial"]
Perception_Spatial_Surfaces = ["Perception_Spatial", "Foundation"]
Phone = []
Phone_ApplicationModel = ["Phone"]
Phone_Devices = ["Phone"]
Phone_Devices_Notification = ["Phone_Devices", "Foundation"]
Phone_Devices_Power = ["Phone_Devices", "Foundation"]
Phone_Management = ["Phone"]
Phone_Management_Deployment = ["Phone_Management", "Foundation"]
Phone_Media = ["Phone"]
Phone_Media_Devices = ["Phone_Media", "Foundation"]
Phone_Notification = ["Phone"]
Phone_Notification_Management = ["Phone_Notification", "Foundation"]
Phone_PersonalInformation = ["Phone", "Foundation"]
Phone_PersonalInformation_Provisioning = ["Phone_PersonalInformation", "Foundation"]
Phone_Speech = ["Phone"]
Phone_Speech_Recognition = ["Phone_Speech"]
Phone_StartScreen = ["Phone", "Foundation"]
Phone_System = ["Phone"]
Phone_System_Power = ["Phone_System", "Foundation"]
Phone_System_Profile = ["Phone_System"]
Phone_System_UserProfile = ["Phone_System"]
Phone_System_UserProfile_GameServices = ["Phone_System_UserProfile"]
Phone_System_UserProfile_GameServices_Core = ["Phone_System_UserProfile_GameServices", "Foundation"]
Phone_UI = ["Phone"]
Phone_UI_Input = ["Phone_UI", "Foundation"]
Security = []
Security_Authentication = ["Security"]
Security_Authentication_Identity = ["Security_Authentication", "Foundation"]
Security_Authentication_Identity_Core = ["Security_Authentication_Identity", "Foundation"]
Security_Authentication_OnlineId = ["Security_Authentication", "Foundation"]
Security_Authentication_Web = ["Security_Authentication", "Foundation"]
Security_Authentication_Web_Core = ["Security_Authentication_Web", "Foundation"]
Security_Authentication_Web_Provider = ["Security_Authentication_Web", "Foundation"]
Security_Authorization = ["Security"]
Security_Authorization_AppCapabilityAccess = ["Security_Authorization", "Foundation"]
Security_Credentials = ["Security", "Foundation"]
Security_Credentials_UI = ["Security_Credentials", "Foundation"]
Security_Cryptography = ["Security"]
Security_Cryptography_Certificates = ["Security_Cryptography", "Foundation"]
Security_Cryptography_Core = ["Security_Cryptography", "Foundation"]
Security_Cryptography_DataProtection = ["Security_Cryptography", "Foundation"]
Security_DataProtection = ["Security", "Foundation"]
Security_EnterpriseData = ["Security", "Foundation"]
Security_ExchangeActiveSyncProvisioning = ["Security", "Foundation"]
Security_Isolation = ["Security", "Foundation"]
Services = []
Services_Maps = ["Services", "Foundation"]
Services_Maps_Guidance = ["Services_Maps", "Foundation"]
Services_Maps_LocalSearch = ["Services_Maps", "Foundation"]
Services_Maps_OfflineMaps = ["Services_Maps", "Foundation"]
Services_Store = ["Services", "Foundation"]
Services_TargetedContent = ["Services", "Foundation"]
Storage = ["Foundation"]
Storage_AccessCache = ["Storage", "Foundation"]
Storage_BulkAccess = ["Storage", "Foundation"]
Storage_Compression = ["Storage", "Foundation"]
Storage_FileProperties = ["Storage", "Foundation"]
Storage_Pickers = ["Storage", "Foundation"]
Storage_Pickers_Provider = ["Storage_Pickers", "Foundation"]
Storage_Provider = ["Storage", "Foundation"]
Storage_Search = ["Storage", "Foundation"]
Storage_Streams = ["Storage", "Foundation"]
System = ["Foundation"]
System_Diagnostics = ["System", "Foundation"]
System_Diagnostics_DevicePortal = ["System_Diagnostics", "Foundation"]
System_Diagnostics_Telemetry = ["System_Diagnostics"]
System_Diagnostics_TraceReporting = ["System_Diagnostics"]
System_Display = ["System"]
System_Implementation = ["System"]
System_Implementation_FileExplorer = ["System_Implementation", "Foundation"]
System_Inventory = ["System", "Foundation"]
System_Power = ["System", "Foundation"]
System_Profile = ["System", "Foundation"]
System_Profile_SystemManufacturers = ["System_Profile", "Foundation"]
System_RemoteDesktop = ["System"]
System_RemoteDesktop_Input = ["System_RemoteDesktop"]
System_RemoteDesktop_Provider = ["System_RemoteDesktop", "Foundation"]
System_RemoteSystems = ["System", "Foundation"]
System_Threading = ["System", "Foundation"]
System_Threading_Core = ["System_Threading", "Foundation"]
System_Update = ["System", "Foundation"]
System_UserProfile = ["System", "Foundation"]
UI = []
UI_Accessibility = ["UI", "Foundation"]
UI_ApplicationSettings = ["UI", "Foundation"]
UI_Composition = ["UI", "Foundation"]
UI_Composition_Core = ["UI_Composition", "Foundation"]
UI_Composition_Desktop = ["UI_Composition"]
UI_Composition_Diagnostics = ["UI_Composition"]
UI_Composition_Effects = ["UI_Composition"]
UI_Composition_Interactions = ["UI_Composition", "Foundation"]
UI_Composition_Scenes = ["UI_Composition", "Foundation"]
UI_Core = ["UI", "Foundation"]
UI_Core_AnimationMetrics = ["UI_Core", "Foundation"]
UI_Core_Preview = ["UI_Core", "Foundation"]
UI_Input = ["UI", "Foundation"]
UI_Input_Core = ["UI_Input"]
UI_Input_Inking = ["UI_Input", "Foundation"]
UI_Input_Inking_Analysis = ["UI_Input_Inking", "Foundation"]
UI_Input_Inking_Core = ["UI_Input_Inking", "Foundation"]
UI_Input_Inking_Preview = ["UI_Input_Inking", "Foundation"]
UI_Input_Preview = ["UI_Input"]
UI_Input_Preview_Injection = ["UI_Input_Preview"]
UI_Input_Spatial = ["UI_Input", "Foundation"]
UI_Notifications = ["UI", "Foundation"]
UI_Notifications_Management = ["UI_Notifications", "Foundation"]
UI_Notifications_Preview = ["UI_Notifications"]
UI_Popups = ["UI", "Foundation"]
UI_Shell = ["UI", "Foundation"]
UI_StartScreen = ["UI", "Foundation"]
UI_Text = ["UI", "Foundation"]
UI_Text_Core = ["UI_Text", "Foundation"]
UI_UIAutomation = ["UI"]
UI_UIAutomation_Core = ["UI_UIAutomation", "Foundation"]
UI_ViewManagement = ["UI", "Foundation"]
UI_ViewManagement_Core = ["UI_ViewManagement", "Foundation"]
UI_WebUI = ["UI", "Foundation"]
UI_WebUI_Core = ["UI_WebUI", "Foundation"]
UI_WindowManagement = ["UI", "Foundation"]
UI_WindowManagement_Preview = ["UI_WindowManagement", "Foundation"]
Wdk = []
Wdk_Devices = ["Wdk"]
Wdk_Devices_HumanInterfaceDevice = ["Wdk_Devices", "Win32_Foundation"]
Wdk_Foundation = ["Wdk", "Win32_Foundation"]
Wdk_Graphics = ["Wdk"]
Wdk_Graphics_Direct3D = ["Wdk_Graphics", "Win32_Foundation"]
Wdk_NetworkManagement = ["Wdk"]
Wdk_NetworkManagement_Ndis = ["Wdk_NetworkManagement", "Win32_Foundation"]
Wdk_NetworkManagement_WindowsFilteringPlatform = ["Wdk_NetworkManagement", "Win32_Foundation"]
Wdk_Storage = ["Wdk"]
Wdk_Storage_FileSystem = ["Wdk_Storage", "Win32_Foundation"]
Wdk_Storage_FileSystem_Minifilters = ["Wdk_Storage_FileSystem", "Win32_Foundation"]
Wdk_System = ["Wdk"]
Wdk_System_IO = ["Wdk_System", "Win32_Foundation"]
Wdk_System_OfflineRegistry = ["Wdk_System", "Win32_Foundation"]
Wdk_System_Registry = ["Wdk_System", "Win32_Foundation"]
Wdk_System_SystemInformation = ["Wdk_System", "Win32_Foundation"]
Wdk_System_SystemServices = ["Wdk_System", "Win32_Foundation"]
Wdk_System_Threading = ["Wdk_System", "Win32_Foundation"]
Web = ["Foundation"]
Web_AtomPub = ["Web", "Foundation"]
Web_Http = ["Web", "Foundation"]
Web_Http_Diagnostics = ["Web_Http", "Foundation"]
Web_Http_Filters = ["Web_Http", "Foundation"]
Web_Http_Headers = ["Web_Http", "Foundation"]
Web_Syndication = ["Web", "Foundation"]
Web_UI = ["Web", "Foundation"]
Web_UI_Interop = ["Web_UI", "Foundation"]
Win32 = []
Win32_AI = ["Win32"]
Win32_AI_MachineLearning = ["Win32_AI"]
Win32_AI_MachineLearning_DirectML = ["Win32_AI_MachineLearning", "Win32_Foundation"]
Win32_AI_MachineLearning_WinML = ["Win32_AI_MachineLearning", "Win32_Foundation"]
Win32_Data = ["Win32"]
Win32_Data_HtmlHelp = ["Win32_Data", "Win32_Foundation"]
Win32_Data_RightsManagement = ["Win32_Data", "Win32_Foundation"]
Win32_Data_Xml = ["Win32_Data"]
Win32_Data_Xml_MsXml = ["Win32_Data_Xml", "Win32_Foundation"]
Win32_Data_Xml_XmlLite = ["Win32_Data_Xml", "Win32_Foundation"]
Win32_Devices = ["Win32"]
Win32_Devices_AllJoyn = ["Win32_Devices", "Win32_Foundation"]
Win32_Devices_BiometricFramework = ["Win32_Devices", "Win32_Foundation"]
Win32_Devices_Bluetooth = ["Win32_Devices", "Win32_Foundation"]
Win32_Devices_Communication = ["Win32_Devices", "Win32_Foundation"]
Win32_Devices_DeviceAccess = ["Win32_Devices"]
Win32_Devices_DeviceAndDriverInstallation = ["Win32_Devices", "Win32_Foundation"]
Win32_Devices_DeviceQuery = ["Win32_Devices"]
Win32_Devices_Display = ["Win32_Devices", "Win32_Foundation"]
Win32_Devices_Enumeration = ["Win32_Devices"]
Win32_Devices_Enumeration_Pnp = ["Win32_Devices_Enumeration", "Win32_Foundation"]
Win32_Devices_Fax = ["Win32_Devices", "Win32_Foundation"]
Win32_Devices_FunctionDiscovery = ["Win32_Devices", "Win32_Foundation"]
Win32_Devices_Geolocation = ["Win32_Devices", "Win32_Foundation"]
Win32_Devices_HumanInterfaceDevice = ["Win32_Devices", "Win32_Foundation"]
Win32_Devices_ImageAcquisition = ["Win32_Devices", "Win32_Foundation"]
Win32_Devices_PortableDevices = ["Win32_Devices", "Win32_Foundation"]
Win32_Devices_Properties = ["Win32_Devices"]
Win32_Devices_Pwm = ["Win32_Devices", "Win32_Foundation"]
Win32_Devices_Sensors = ["Win32_Devices", "Win32_Foundation"]
Win32_Devices_SerialCommunication = ["Win32_Devices", "Win32_Foundation"]
Win32_Devices_Tapi = ["Win32_Devices", "Win32_Foundation"]
Win32_Devices_Usb = ["Win32_Devices", "Win32_Foundation"]
Win32_Devices_WebServicesOnDevices = ["Win32_Devices", "Win32_Foundation"]
Win32_Foundation = ["Win32"]
Win32_Gaming = ["Win32", "Win32_Foundation"]
Win32_Globalization = ["Win32", "Win32_Foundation"]
Win32_Graphics = ["Win32"]
Win32_Graphics_CompositionSwapchain = ["Win32_Graphics", "Win32_Foundation"]
Win32_Graphics_DXCore = ["Win32_Graphics", "Win32_Foundation"]
Win32_Graphics_Direct2D = ["Win32_Graphics", "Win32_Foundation"]
Win32_Graphics_Direct2D_Common = ["Win32_Graphics_Direct2D"]
Win32_Graphics_Direct3D = ["Win32_Graphics"]
Win32_Graphics_Direct3D10 = ["Win32_Graphics", "Win32_Foundation"]
Win32_Graphics_Direct3D11 = ["Win32_Graphics", "Win32_Foundation"]
Win32_Graphics_Direct3D11on12 = ["Win32_Graphics"]
Win32_Graphics_Direct3D12 = ["Win32_Graphics", "Win32_Foundation"]
Win32_Graphics_Direct3D9 = ["Win32_Graphics", "Win32_Foundation"]
Win32_Graphics_Direct3D9on12 = ["Win32_Graphics", "Win32_Foundation"]
Win32_Graphics_Direct3D_Dxc = ["Win32_Graphics_Direct3D", "Win32_Foundation"]
Win32_Graphics_Direct3D_Fxc = ["Win32_Graphics_Direct3D", "Win32_Foundation"]
Win32_Graphics_DirectComposition = ["Win32_Graphics", "Win32_Foundation"]
Win32_Graphics_DirectDraw = ["Win32_Graphics", "Win32_Foundation"]
Win32_Graphics_DirectManipulation = ["Win32_Graphics", "Win32_Foundation"]
Win32_Graphics_DirectWrite = ["Win32_Graphics", "Win32_Foundation"]
Win32_Graphics_Dwm = ["Win32_Graphics", "Win32_Foundation"]
Win32_Graphics_Dxgi = ["Win32_Graphics", "Win32_Foundation"]
Win32_Graphics_Dxgi_Common = ["Win32_Graphics_Dxgi", "Win32_Foundation"]
Win32_Graphics_Gdi = ["Win32_Graphics", "Win32_Foundation"]
Win32_Graphics_GdiPlus = ["Win32_Graphics", "Win32_Foundation"]
Win32_Graphics_Hlsl = ["Win32_Graphics"]
Win32_Graphics_Imaging = ["Win32_Graphics", "Win32_Foundation"]
Win32_Graphics_Imaging_D2D = ["Win32_Graphics_Imaging"]
Win32_Graphics_OpenGL = ["Win32_Graphics", "Win32_Foundation"]
Win32_Graphics_Printing = ["Win32_Graphics", "Win32_Foundation"]
Win32_Graphics_Printing_PrintTicket = ["Win32_Graphics_Printing", "Win32_Foundation"]
Win32_Management = ["Win32"]
Win32_Management_MobileDeviceManagementRegistration = ["Win32_Management", "Win32_Foundation"]
Win32_Media = ["Win32", "Win32_Foundation"]
Win32_Media_Audio = ["Win32_Media", "Win32_Foundation"]
Win32_Media_Audio_Apo = ["Win32_Media_Audio", "Win32_Foundation"]
Win32_Media_Audio_DirectMusic = ["Win32_Media_Audio", "Win32_Foundation"]
Win32_Media_Audio_DirectSound = ["Win32_Media_Audio", "Win32_Foundation"]
Win32_Media_Audio_Endpoints = ["Win32_Media_Audio", "Win32_Foundation"]
Win32_Media_Audio_XAudio2 = ["Win32_Media_Audio", "Win32_Foundation"]
Win32_Media_DeviceManager = ["Win32_Media", "Win32_Foundation"]
Win32_Media_DirectShow = ["Win32_Media", "Win32_Foundation"]
Win32_Media_DirectShow_Tv = ["Win32_Media_DirectShow", "Win32_Foundation"]
Win32_Media_DirectShow_Xml = ["Win32_Media_DirectShow"]
Win32_Media_DxMediaObjects = ["Win32_Media", "Win32_Foundation"]
Win32_Media_KernelStreaming = ["Win32_Media", "Win32_Foundation"]
Win32_Media_LibrarySharingServices = ["Win32_Media", "Win32_Foundation"]
Win32_Media_MediaFoundation = ["Win32_Media", "Win32_Foundation"]
Win32_Media_MediaPlayer = ["Win32_Media", "Win32_Foundation"]
Win32_Media_Multimedia = ["Win32_Media", "Win32_Foundation"]
Win32_Media_PictureAcquisition = ["Win32_Media", "Win32_Foundation"]
Win32_Media_Speech = ["Win32_Media", "Win32_Foundation"]
Win32_Media_Streaming = ["Win32_Media", "Win32_Foundation"]
Win32_Media_WindowsMediaFormat = ["Win32_Media", "Win32_Foundation"]
Win32_NetworkManagement = ["Win32"]
Win32_NetworkManagement_Dhcp = ["Win32_NetworkManagement", "Win32_Foundation"]
Win32_NetworkManagement_Dns = ["Win32_NetworkManagement", "Win32_Foundation"]
Win32_NetworkManagement_InternetConnectionWizard = ["Win32_NetworkManagement"]
Win32_NetworkManagement_IpHelper = ["Win32_NetworkManagement", "Win32_Foundation"]
Win32_NetworkManagement_MobileBroadband = ["Win32_NetworkManagement", "Win32_Foundation"]
Win32_NetworkManagement_Multicast = ["Win32_NetworkManagement", "Win32_Foundation"]
Win32_NetworkManagement_Ndis = ["Win32_NetworkManagement", "Win32_Foundation"]
Win32_NetworkManagement_NetBios = ["Win32_NetworkManagement", "Win32_Foundation"]
Win32_NetworkManagement_NetManagement = ["Win32_NetworkManagement", "Win32_Foundation"]
Win32_NetworkManagement_NetShell = ["Win32_NetworkManagement", "Win32_Foundation"]
Win32_NetworkManagement_NetworkDiagnosticsFramework = ["Win32_NetworkManagement", "Win32_Foundation"]
Win32_NetworkManagement_NetworkPolicyServer = ["Win32_NetworkManagement", "Win32_Foundation"]
Win32_NetworkManagement_P2P = ["Win32_NetworkManagement", "Win32_Foundation"]
Win32_NetworkManagement_QoS = ["Win32_NetworkManagement", "Win32_Foundation"]
Win32_NetworkManagement_Rras = ["Win32_NetworkManagement", "Win32_Foundation"]
Win32_NetworkManagement_Snmp = ["Win32_NetworkManagement", "Win32_Foundation"]
Win32_NetworkManagement_WNet = ["Win32_NetworkManagement", "Win32_Foundation"]
Win32_NetworkManagement_WebDav = ["Win32_NetworkManagement", "Win32_Foundation"]
Win32_NetworkManagement_WiFi = ["Win32_NetworkManagement", "Win32_Foundation"]
Win32_NetworkManagement_WindowsConnectNow = ["Win32_NetworkManagement"]
Win32_NetworkManagement_WindowsConnectionManager = ["Win32_NetworkManagement", "Win32_Foundation"]
Win32_NetworkManagement_WindowsFilteringPlatform = ["Win32_NetworkManagement", "Win32_Foundation"]
Win32_NetworkManagement_WindowsFirewall = ["Win32_NetworkManagement", "Win32_Foundation"]
Win32_NetworkManagement_WindowsNetworkVirtualization = ["Win32_NetworkManagement", "Win32_Foundation"]
Win32_Networking = ["Win32"]
Win32_Networking_ActiveDirectory = ["Win32_Networking", "Win32_Foundation"]
Win32_Networking_BackgroundIntelligentTransferService = ["Win32_Networking", "Win32_Foundation"]
Win32_Networking_Clustering = ["Win32_Networking", "Win32_Foundation"]
Win32_Networking_HttpServer = ["Win32_Networking", "Win32_Foundation"]
Win32_Networking_Ldap = ["Win32_Networking", "Win32_Foundation"]
Win32_Networking_NetworkListManager = ["Win32_Networking", "Win32_Foundation"]
Win32_Networking_RemoteDifferentialCompression = ["Win32_Networking", "Win32_Foundation"]
Win32_Networking_WebSocket = ["Win32_Networking"]
Win32_Networking_WinHttp = ["Win32_Networking", "Win32_Foundation"]
Win32_Networking_WinInet = ["Win32_Networking", "Win32_Foundation"]
Win32_Networking_WinSock = ["Win32_Networking", "Win32_Foundation"]
Win32_Networking_WindowsWebServices = ["Win32_Networking", "Win32_Foundation"]
Win32_Security = ["Win32", "Win32_Foundation"]
Win32_Security_AppLocker = ["Win32_Security", "Win32_Foundation"]
Win32_Security_Authentication = ["Win32_Security"]
Win32_Security_Authentication_Identity = ["Win32_Security_Authentication", "Win32_Foundation"]
Win32_Security_Authentication_Identity_Provider = ["Win32_Security_Authentication_Identity", "Win32_Foundation"]
Win32_Security_Authorization = ["Win32_Security", "Win32_Foundation"]
Win32_Security_Authorization_UI = ["Win32_Security_Authorization", "Win32_Foundation"]
Win32_Security_ConfigurationSnapin = ["Win32_Security", "Win32_Foundation"]
Win32_Security_Credentials = ["Win32_Security", "Win32_Foundation"]
Win32_Security_Cryptography = ["Win32_Security", "Win32_Foundation"]
Win32_Security_Cryptography_Catalog = ["Win32_Security_Cryptography", "Win32_Foundation"]
Win32_Security_Cryptography_Certificates = ["Win32_Security_Cryptography", "Win32_Foundation"]
Win32_Security_Cryptography_Sip = ["Win32_Security_Cryptography", "Win32_Foundation"]
Win32_Security_Cryptography_UI = ["Win32_Security_Cryptography", "Win32_Foundation"]
Win32_Security_DiagnosticDataQuery = ["Win32_Security", "Win32_Foundation"]
Win32_Security_DirectoryServices = ["Win32_Security", "Win32_Foundation"]
Win32_Security_EnterpriseData = ["Win32_Security", "Win32_Foundation"]
Win32_Security_ExtensibleAuthenticationProtocol = ["Win32_Security", "Win32_Foundation"]
Win32_Security_Isolation = ["Win32_Security", "Win32_Foundation"]
Win32_Security_LicenseProtection = ["Win32_Security", "Win32_Foundation"]
Win32_Security_NetworkAccessProtection = ["Win32_Security", "Win32_Foundation"]
Win32_Security_Tpm = ["Win32_Security", "Win32_Foundation"]
Win32_Security_WinTrust = ["Win32_Security", "Win32_Foundation"]
Win32_Security_WinWlx = ["Win32_Security", "Win32_Foundation"]
Win32_Storage = ["Win32"]
Win32_Storage_Cabinets = ["Win32_Storage", "Win32_Foundation"]
Win32_Storage_CloudFilters = ["Win32_Storage", "Win32_Foundation"]
Win32_Storage_Compression = ["Win32_Storage", "Win32_Foundation"]
Win32_Storage_DataDeduplication = ["Win32_Storage", "Win32_Foundation"]
Win32_Storage_DistributedFileSystem = ["Win32_Storage"]
Win32_Storage_EnhancedStorage = ["Win32_Storage", "Win32_Foundation"]
Win32_Storage_FileHistory = ["Win32_Storage", "Win32_Foundation"]
Win32_Storage_FileServerResourceManager = ["Win32_Storage", "Win32_Foundation"]
Win32_Storage_FileSystem = ["Win32_Storage", "Win32_Foundation"]
Win32_Storage_Imapi = ["Win32_Storage", "Win32_Foundation"]
Win32_Storage_IndexServer = ["Win32_Storage", "Win32_Foundation"]
Win32_Storage_InstallableFileSystems = ["Win32_Storage", "Win32_Foundation"]
Win32_Storage_IscsiDisc = ["Win32_Storage", "Win32_Foundation"]
Win32_Storage_Jet = ["Win32_Storage"]
Win32_Storage_Nvme = ["Win32_Storage"]
Win32_Storage_OfflineFiles = ["Win32_Storage", "Win32_Foundation"]
Win32_Storage_OperationRecorder = ["Win32_Storage", "Win32_Foundation"]
Win32_Storage_Packaging = ["Win32_Storage"]
Win32_Storage_Packaging_Appx = ["Win32_Storage_Packaging", "Win32_Foundation"]
Win32_Storage_Packaging_Opc = ["Win32_Storage_Packaging", "Win32_Foundation"]
Win32_Storage_ProjectedFileSystem = ["Win32_Storage", "Win32_Foundation"]
Win32_Storage_StructuredStorage = ["Win32_Storage"]
Win32_Storage_Vhd = ["Win32_Storage", "Win32_Foundation"]
Win32_Storage_VirtualDiskService = ["Win32_Storage", "Win32_Foundation"]
Win32_Storage_Vss = ["Win32_Storage", "Win32_Foundation"]
Win32_Storage_Xps = ["Win32_Storage", "Win32_Foundation"]
Win32_Storage_Xps_Printing = ["Win32_Storage_Xps", "Win32_Foundation"]
Win32_System = ["Win32"]
Win32_System_AddressBook = ["Win32_System", "Win32_Foundation"]
Win32_System_Antimalware = ["Win32_System", "Win32_Foundation"]
Win32_System_ApplicationInstallationAndServicing = ["Win32_System", "Win32_Foundation"]
Win32_System_ApplicationVerifier = ["Win32_System", "Win32_Foundation"]
Win32_System_AssessmentTool = ["Win32_System", "Win32_Foundation"]
Win32_System_ClrHosting = ["Win32_System", "Win32_Foundation"]
Win32_System_Com = ["Win32_System", "Win32_Foundation"]
Win32_System_Com_CallObj = ["Win32_System_Com", "Win32_Foundation"]
Win32_System_Com_ChannelCredentials = ["Win32_System_Com", "Win32_Foundation"]
Win32_System_Com_Events = ["Win32_System_Com", "Win32_Foundation"]
Win32_System_Com_Marshal = ["Win32_System_Com", "Win32_Foundation"]
Win32_System_Com_StructuredStorage = ["Win32_System_Com", "Win32_Foundation"]
Win32_System_Com_UI = ["Win32_System_Com"]
Win32_System_Com_Urlmon = ["Win32_System_Com", "Win32_Foundation"]
Win32_System_ComponentServices = ["Win32_System", "Win32_Foundation"]
Win32_System_Console = ["Win32_System", "Win32_Foundation"]
Win32_System_Contacts = ["Win32_System", "Win32_Foundation"]
Win32_System_CorrelationVector = ["Win32_System"]
Win32_System_DataExchange = ["Win32_System", "Win32_Foundation"]
Win32_System_DeploymentServices = ["Win32_System", "Win32_Foundation"]
Win32_System_DesktopSharing = ["Win32_System", "Win32_Foundation"]
Win32_System_DeveloperLicensing = ["Win32_System", "Win32_Foundation"]
Win32_System_Diagnostics = ["Win32_System"]
Win32_System_Diagnostics_Ceip = ["Win32_System_Diagnostics", "Win32_Foundation"]
Win32_System_Diagnostics_ClrProfiling = ["Win32_System_Diagnostics", "Win32_Foundation"]
Win32_System_Diagnostics_Debug = ["Win32_System_Diagnostics", "Win32_Foundation"]
Win32_System_Diagnostics_Debug_ActiveScript = ["Win32_System_Diagnostics_Debug", "Win32_Foundation"]
Win32_System_Diagnostics_Debug_Extensions = ["Win32_System_Diagnostics_Debug", "Win32_Foundation"]
Win32_System_Diagnostics_Etw = ["Win32_System_Diagnostics", "Win32_Foundation"]
Win32_System_Diagnostics_ProcessSnapshotting = ["Win32_System_Diagnostics", "Win32_Foundation"]
Win32_System_Diagnostics_ToolHelp = ["Win32_System_Diagnostics", "Win32_Foundation"]
Win32_System_DistributedTransactionCoordinator = ["Win32_System", "Win32_Foundation"]
Win32_System_Environment = ["Win32_System", "Win32_Foundation"]
Win32_System_ErrorReporting = ["Win32_System", "Win32_Foundation"]
Win32_System_EventCollector = ["Win32_System", "Win32_Foundation"]
Win32_System_EventLog = ["Win32_System", "Win32_Foundation"]
Win32_System_EventNotificationService = ["Win32_System", "Win32_Foundation"]
Win32_System_GroupPolicy = ["Win32_System", "Win32_Foundation"]
Win32_System_HostCompute = ["Win32_System"]
Win32_System_HostComputeNetwork = ["Win32_System", "Win32_Foundation"]
Win32_System_HostComputeSystem = ["Win32_System", "Win32_Foundation"]
Win32_System_Hypervisor = ["Win32_System", "Win32_Foundation"]
Win32_System_IO = ["Win32_System", "Win32_Foundation"]
Win32_System_Iis = ["Win32_System", "Win32_Foundation"]
Win32_System_Ioctl = ["Win32_System", "Win32_Foundation"]
Win32_System_JobObjects = ["Win32_System", "Win32_Foundation"]
Win32_System_Js = ["Win32_System", "Win32_Foundation"]
Win32_System_Kernel = ["Win32_System", "Win32_Foundation"]
Win32_System_LibraryLoader = ["Win32_System", "Win32_Foundation"]
Win32_System_Mailslots = ["Win32_System", "Win32_Foundation"]
Win32_System_Mapi = ["Win32_System"]
Win32_System_Memory = ["Win32_System", "Win32_Foundation"]
Win32_System_Memory_NonVolatile = ["Win32_System_Memory"]
Win32_System_MessageQueuing = ["Win32_System", "Win32_Foundation"]
Win32_System_MixedReality = ["Win32_System"]
Win32_System_Mmc = ["Win32_System", "Win32_Foundation"]
Win32_System_Ole = ["Win32_System", "Win32_Foundation"]
Win32_System_ParentalControls = ["Win32_System", "Win32_Foundation"]
Win32_System_PasswordManagement = ["Win32_System", "Win32_Foundation"]
Win32_System_Performance = ["Win32_System", "Win32_Foundation"]
Win32_System_Performance_HardwareCounterProfiling = ["Win32_System_Performance", "Win32_Foundation"]
Win32_System_Pipes = ["Win32_System", "Win32_Foundation"]
Win32_System_Power = ["Win32_System", "Win32_Foundation"]
Win32_System_ProcessStatus = ["Win32_System", "Win32_Foundation"]
Win32_System_RealTimeCommunications = ["Win32_System", "Win32_Foundation"]
Win32_System_Recovery = ["Win32_System", "Win32_Foundation"]
Win32_System_Registry = ["Win32_System", "Win32_Foundation"]
Win32_System_RemoteAssistance = ["Win32_System"]
Win32_System_RemoteDesktop = ["Win32_System", "Win32_Foundation"]
Win32_System_RemoteManagement = ["Win32_System", "Win32_Foundation"]
Win32_System_RestartManager = ["Win32_System", "Win32_Foundation"]
Win32_System_Restore = ["Win32_System", "Win32_Foundation"]
Win32_System_Rpc = ["Win32_System", "Win32_Foundation"]
Win32_System_Search = ["Win32_System", "Win32_Foundation"]
Win32_System_Search_Common = ["Win32_System_Search"]
Win32_System_SecurityCenter = ["Win32_System", "Win32_Foundation"]
Win32_System_ServerBackup = ["Win32_System", "Win32_Foundation"]
Win32_System_Services = ["Win32_System", "Win32_Foundation"]
Win32_System_SettingsManagementInfrastructure = ["Win32_System", "Win32_Foundation"]
Win32_System_SetupAndMigration = ["Win32_System", "Win32_Foundation"]
Win32_System_Shutdown = ["Win32_System", "Win32_Foundation"]
Win32_System_SideShow = ["Win32_System", "Win32_Foundation"]
Win32_System_StationsAndDesktops = ["Win32_System", "Win32_Foundation"]
Win32_System_SubsystemForLinux = ["Win32_System", "Win32_Foundation"]
Win32_System_SystemInformation = ["Win32_System", "Win32_Foundation"]
Win32_System_SystemServices = ["Win32_System", "Win32_Foundation"]
Win32_System_TaskScheduler = ["Win32_System", "Win32_Foundation"]
Win32_System_Threading = ["Win32_System", "Win32_Foundation"]
Win32_System_Time = ["Win32_System", "Win32_Foundation"]
Win32_System_TpmBaseServices = ["Win32_System", "Win32_Foundation"]
Win32_System_TransactionServer = ["Win32_System"]
Win32_System_UpdateAgent = ["Win32_System", "Win32_Foundation"]
Win32_System_UpdateAssessment = ["Win32_System", "Win32_Foundation"]
Win32_System_UserAccessLogging = ["Win32_System"]
Win32_System_Variant = ["Win32_System", "Win32_Foundation"]
Win32_System_VirtualDosMachines = ["Win32_System", "Win32_Foundation"]
Win32_System_WinRT = ["Win32_System", "Win32_Foundation"]
Win32_System_WinRT_AllJoyn = ["Win32_System_WinRT"]
Win32_System_WinRT_Composition = ["Win32_System_WinRT", "Win32_Foundation"]
Win32_System_WinRT_CoreInputView = ["Win32_System_WinRT", "Win32_Foundation"]
Win32_System_WinRT_Direct3D11 = ["Win32_System_WinRT"]
Win32_System_WinRT_Display = ["Win32_System_WinRT", "Win32_Foundation"]
Win32_System_WinRT_Graphics = ["Win32_System_WinRT"]
Win32_System_WinRT_Graphics_Capture = ["Win32_System_WinRT_Graphics", "Win32_Foundation"]
Win32_System_WinRT_Graphics_Direct2D = ["Win32_System_WinRT_Graphics", "Foundation"]
Win32_System_WinRT_Graphics_Imaging = ["Win32_System_WinRT_Graphics", "Win32_Foundation"]
Win32_System_WinRT_Holographic = ["Win32_System_WinRT"]
Win32_System_WinRT_Isolation = ["Win32_System_WinRT", "Win32_Foundation"]
Win32_System_WinRT_ML = ["Win32_System_WinRT"]
Win32_System_WinRT_Media = ["Win32_System_WinRT", "Win32_Foundation"]
Win32_System_WinRT_Metadata = ["Win32_System_WinRT", "Win32_Foundation"]
Win32_System_WinRT_Pdf = ["Win32_System_WinRT", "Win32_Foundation"]
Win32_System_WinRT_Printing = ["Win32_System_WinRT", "Win32_Foundation"]
Win32_System_WinRT_Shell = ["Win32_System_WinRT"]
Win32_System_WinRT_Storage = ["Win32_System_WinRT", "Win32_Foundation"]
Win32_System_WindowsProgramming = ["Win32_System", "Win32_Foundation"]
Win32_System_WindowsSync = ["Win32_System", "Win32_Foundation"]
Win32_System_Wmi = ["Win32_System", "Win32_Foundation"]
Win32_UI = ["Win32"]
Win32_UI_Accessibility = ["Win32_UI", "Win32_Foundation"]
Win32_UI_Animation = ["Win32_UI", "Win32_Foundation"]
Win32_UI_ColorSystem = ["Win32_UI", "Win32_Foundation"]
Win32_UI_Controls = ["Win32_UI", "Win32_Foundation"]
Win32_UI_Controls_Dialogs = ["Win32_UI_Controls", "Win32_Foundation"]
Win32_UI_Controls_RichEdit = ["Win32_UI_Controls", "Win32_Foundation"]
Win32_UI_HiDpi = ["Win32_UI", "Win32_Foundation"]
Win32_UI_Input = ["Win32_UI", "Win32_Foundation"]
Win32_UI_Input_Ime = ["Win32_UI_Input", "Win32_Foundation"]
Win32_UI_Input_Ink = ["Win32_UI_Input", "Win32_Foundation"]
Win32_UI_Input_KeyboardAndMouse = ["Win32_UI_Input", "Win32_Foundation"]
Win32_UI_Input_Pointer = ["Win32_UI_Input", "Win32_Foundation"]
Win32_UI_Input_Radial = ["Win32_UI_Input", "Win32_Foundation"]
Win32_UI_Input_Touch = ["Win32_UI_Input", "Win32_Foundation"]
Win32_UI_Input_XboxController = ["Win32_UI_Input", "Win32_Foundation"]
Win32_UI_InteractionContext = ["Win32_UI", "Win32_Foundation"]
Win32_UI_LegacyWindowsEnvironmentFeatures = ["Win32_UI", "Win32_Foundation"]
Win32_UI_Magnification = ["Win32_UI", "Win32_Foundation"]
Win32_UI_Notifications = ["Win32_UI"]
Win32_UI_Ribbon = ["Win32_UI", "Win32_Foundation"]
Win32_UI_Shell = ["Win32_UI", "Win32_Foundation"]
Win32_UI_Shell_Common = ["Win32_UI_Shell"]
Win32_UI_Shell_PropertiesSystem = ["Win32_UI_Shell", "Win32_Foundation"]
Win32_UI_TabletPC = ["Win32_UI", "Win32_Foundation"]
Win32_UI_TextServices = ["Win32_UI", "Win32_Foundation"]
Win32_UI_WindowsAndMessaging = ["Win32_UI", "Win32_Foundation"]
Win32_UI_Wpf = ["Win32_UI", "Win32_Foundation"]
Win32_Web = ["Win32"]
Win32_Web_InternetExplorer = ["Win32_Web", "Win32_Foundation"]
